--- a/game.html
+++ b/game.html
@@ -38,6 +38,11 @@
             </article>
         </section>
         <section id="right"></section>
+        <section id="right">
+            <article>
+                <p id="text">pelin teksti tähän :D</p>
+            </article>
+        </section>
     </main>
 
     <footer id="footer">
