--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
     <header id="header">
         <nav id="nav">
             <h1>Pelin nimi</h1>
-            <a title="home" href="game.html">HOME</a>
+            <a title="home" href="main.html">HOME</a>
             <a title="map" href="map.html">MAP</a>
             <select id="options">
                 <option value="choose">OPTIONS</option>
@@ -27,17 +27,15 @@
     </header>
 
 
-
     <main>
         <section id="left">
             <article id="map">
                 <figure>
-                <img src="img/img1" alt="map">
+                <img src="img/map1" alt="map" title="map">
                 <figcaption>kuvateksti</figcaption>
                 </figure>
             </article>
         </section>
-        <section id="right"></section>
         <section id="right">
             <article>
                 <p id="text">pelin teksti tähän :D</p>
