--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 <div>
     <article class="goals">
         <figure id="As"><figcaption>asia</figcaption></figure>
-        <figure id="Eu"><figcaption>europa</figcaption></figure>
-        <figure id="PA"><figcaption>poh am</figcaption></figure>
-        <figure id="EA"><figcaption>et am </figcaption></figure>
-        <figure id="Em"><figcaption>et ma</figcaption></figure>
-        <figure id="As"><figcaption>as</figcaption></figure>
-        <figure id="Af"><figcaption>af </figcaption></figure>
+        <figure id="Eu"><figcaption>europe</figcaption></figure>
+        <figure id="Na"><figcaption>north america</figcaption></figure>
+        <figure id="Pa"><figcaption>south america </figcaption></figure>
+        <figure id="Em"><figcaption>antarctica</figcaption></figure>
+        <figure id="Oc"><figcaption>australia</figcaption></figure>
+        <figure id="Af"><figcaption>africa</figcaption></figure>
     </article>
 </div>
 
