--- a/main.html
+++ b/main.html
@@ -5,8 +5,8 @@
     <meta name="insert name here"
           content="insert content description here"/>
     <title>name</title>
-    <link rel="stylesheet" href="css/style.css"/>
-    <script src="js/main.js" defer></script>
+    <link rel="stylesheet" href="css/style2.css"/>
+    <script src="js/esimerkki.js" defer></script>
 </head>
 <body>
 
