--- a/main.html
+++ b/main.html
@@ -56,13 +56,13 @@
     </main>
 
     <footer class="goals">
-        <figure id="As"><figcaption>asia</figcaption></figure>
-        <figure id="Eu"><figcaption>europe</figcaption></figure>
-        <figure id="Na"><figcaption>north<br>america</figcaption></figure>
-        <figure id="Pa"><figcaption>south<br>america </figcaption></figure>
-        <figure id="Em"><figcaption>antarctica</figcaption></figure>
-        <figure id="Oc"><figcaption>australia</figcaption></figure>
-        <figure id="Af"><figcaption>africa</figcaption></figure>
+        <figure id="AS" title="AS"><figcaption>asia</figcaption></figure>
+        <figure id="EU" title="EU"><figcaption>europe</figcaption></figure>
+        <figure id="NA" title="NA"><figcaption>north<br>america</figcaption></figure>
+        <figure id="SA" title="SA"><figcaption>south<br>america </figcaption></figure>
+        <figure id="AN" title="AN"><figcaption>antarctica</figcaption></figure>
+        <figure id="OC" title="OC"><figcaption>australia</figcaption></figure>
+        <figure id="AF" title="AF"><figcaption>africa</figcaption></figure>
     </footer>
 
 </div>
