--- a/main.html
+++ b/main.html
@@ -2,69 +2,59 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="insert name here"
-          content="insert content description here"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"/>
 
-    <title>21</title>
-    <link rel="stylesheet" href="css/style2.css"/>
+    <link rel="stylesheet" href="https:unpkg.com/leaflet@1.8.0/dist/leaflet.css"/>
     <link rel="shortcut icon" href="#">
-    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 
     <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" defer></script>
-    <script type="module" src="https://cdn.jsdelivr.net/npm/ionicons/dist/ionicons/ionicons.esm.js" defer></script>
-    <script nomodule src="https://cdn.jsdelivr.net/npm/ionicons/dist/ionicons/ionicons.js" defer></script>
     <script src="js/main.js" defer></script>
     <script src="js/esimerkki.js" defer></script>
-
+    <title>21 home</title>
 </head>
-<body>
 
+<body>
 <div class="container">
-    <header id="header">
-        <nav id="nav">
-            <h1 id="title">21</h1>
-            <a title="home" href="main.html">HOME</a>
-            <a title="map" href="map.html">MAP</a>
-            <select id="options">
-                <option value="choose">OPTIONS</option>
-                <option value="instructions">instructions</option>
-                <option value="change_name">change username</option>
-                <option value="save">save</option>
-                <option value="stop">stop playing</option>
-            </select>
+    <header class="header">
+        <h1>21</h1>
+        <nav>
+            <ul class="flex-wrap space-evenly">
+                <li>
+                    <a class="button nav-button" title="about" href="about.html">ABOUT</a>
+                </li>
+                <li>
+                    <a class="button nav-button" title="start" href="start.html">START</a>
+                </li>
+            </ul>
         </nav>
     </header>
 
-
     <main>
-        <section id="map">
-            <article>
-                <figure>
-                <img src="img/map1" alt="map" title="map">
-                <figcaption>kuvateksti</figcaption>
-                </figure>
-            </article>
-        </section>
-        <section id="right">
-            <article>
-                <p id="text">pelin teksti tähän :D</p>
-            </article>
-        </section>
+        <div id="game-text"></div>
+        <div id="map"></div>
     </main>
 
-    <footer class="goals">
-        <figure id="AS" title="AS"><figcaption>asia</figcaption></figure>
-        <figure id="EU" title="EU"><figcaption>europe</figcaption></figure>
-        <figure id="NA" title="NA"><figcaption>north<br>america</figcaption></figure>
-        <figure id="SA" title="SA"><figcaption>south<br>america </figcaption></figure>
-        <figure id="AN" title="AN"><figcaption>antarctica</figcaption></figure>
-        <figure id="OC" title="OC"><figcaption>australia</figcaption></figure>
-        <figure id="AF" title="AF"><figcaption>africa</figcaption></figure>
+    <footer class="footer">
+        <table class="space-evenly">
+            <td class="goal" id="AS">AS</td>
+            <td class="goal" id="EU">EU</td>
+            <td class="goal" id="NA">NA</td>
+            <td class="goal" id="SA">SA</td>
+            <td class="goal" id="AN">AN</td>
+            <td class="goal" id="OC">OC</td>
+            <td class="goal" id="AF">AF</td>
+        </table>
     </footer>
-
 </div>
+
+<div id="username" class="hide">
+    <form id="user-form">
+        <input type="text" placeholder="username" required>
+        <input type="submit" value="save" id="submit">
+    </form>
+</div>
+
 </body>
 </html>
