--- a/start_animation.html
+++ b/start_animation.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>21 flights</title>
-	<link rel="stylesheet" href="start_animation.css">
+	<link rel="stylesheet" href="css/start_animation.css">
 </head>
 <body>
 <audio autoplay loop>
@@ -11,11 +11,11 @@
 	<div id="animation-container">
 		<img src="finnair_preview_rev_1.png" alt="Custom Image">
 		<div class="text-box">
-			<h1><center>21 flights</center></h1>
+			<h1>21 flights</h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sit amet orci vel felis mollis lacinia. Donec vitae augue quis justo commodo iaculis. Etiam id orci eu ex hendrerit feugiat vitae quis urna.</p>
-			<center><a href="https://www.example.com" class="button">CONTINUE</a></center>
+			<a class="button" title="continue" href="about.html">CONTINUE</a>
 
 		</div>
 	</div>
 </body>
-</html>
+<html/>
