--- a/game_over.html
+++ b/game_over.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Game Over Popup</title>
-	<script src="game_over.js"></script>
-	<link rel="stylesheet" href="game_over.css">
+	<script src="js/game_over.js"></script>
+	<link rel="stylesheet" href="css/game_over.css">
 </head>
 <body>
 <script>
