--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
                     <a class="button nav-button" title="home" href="main.html">HOME</a>
                 </li>
                 <li>
-                    <a class="button nav-button" title="start" href="start.html">START</a>
+                    <a class="button nav-button" title="start" href="start_animation.html">START</a>
                 </li>
             </ul>
         </nav>
