--- a/main.html
+++ b/main.html
@@ -11,7 +11,6 @@
 
     <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" defer></script>
     <script src="js/main.js" defer></script>
-    <script src="js/esimerkki.js" defer></script>
     <title>21 home</title>
 </head>
 
@@ -25,7 +24,7 @@
                     <a class="button nav-button" title="about" href="about.html">ABOUT</a>
                 </li>
                 <li>
-                    <a class="button nav-button" title="start" href="start.html">START</a>
+                    <a class="button nav-button" title="start" href="start_animation.html">START</a>
                 </li>
             </ul>
         </nav>
