--- a/about.html
+++ b/about.html
@@ -27,9 +27,10 @@
     <main>
         <div id="about-text">
             <h2>Tervetuloa peliin 21!</h2>
-            <p>Pelin tavoite on käydä jokaisessa seitsemässä maanosassa. Saat lähteä vapaavalintaiselta
+            <p>Pelin tavoite on käydä jokaisessa seitsemässä maanosassa. Lähdet liikkeelle Helsinki-Vantaan
                 lentokentältä. Sen jälkeen sinun täytyy vastata oikein satunnaiseen kysymykseen, jotta pääset etenemään.
-                Sinulla on 21 mahdollisuutta vastata kysymyksiin. Jos vastaat väärin, pysyt paikoillasi. Jos yrityksesi
+                Sinulla on 21 mahdollisuutta vastata kysymyksiin. Jos vastaat oikein, pääset lentämään haluamaasi
+                kohteeseen. Jos vastaat väärin, pysyt paikoillasi. Jos yrityksesi
                 loppuvat etkä ole käynyt jokaisessa maanosassa, häviät pelin.</p>
         </div>
     </main>
