--- a/start_animation.html
+++ b/start_animation.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>21 flights</title>
-	<link rel="stylesheet" href="css/start_animation.css">
+    <title>21 start</title>
+    <link rel="stylesheet" href="css/start_animation.css">
 </head>
 <body>
-<audio autoplay loop>
-	<source src="Angels_and_Airwaves_The_Adventure.mp3" type="audio/mpeg">
-</audio>
-	<div id="animation-container">
-		<img src="finnair_preview_rev_1.png" alt="Custom Image">
-		<div class="text-box">
-			<h1>21 flights</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sit amet orci vel felis mollis lacinia. Donec vitae augue quis justo commodo iaculis. Etiam id orci eu ex hendrerit feugiat vitae quis urna.</p>
-			<a class="button" title="continue" href="about.html">CONTINUE</a>
+<div id="animation-container">
+    <img src="img/finnair_preview_rev_1.png" alt="Custom Image">
+    <div class="text-box">
+        <h1>21</h1>
+        <p>Tavoitteenasi on vierailla jokaisessa maanosassa.
+            Sinulla on 21 mahdollisuutta.</p>
+        <a class="button" title="continue" href="about.html">CONTINUE</a>
 
-		</div>
-	</div>
+    </div>
+</div>
 </body>
 <html/>
