--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="css/style.css">
-    <script src="main.js" defer></script>
+    <script src="js/main.js" defer></script>
     <title>21 about</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
         <nav>
             <ul class="flex-wrap space-evenly">
                 <li>
-                    <a class="button nav-button" title="home" href="main.html">HOME</a>
+                    <a class="button nav-button" title="game" href="main.html">GAME</a>
                 </li>
                 <li>
                     <a class="button nav-button" title="start" href="start_animation.html">START</a>
