--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="https:unpkg.com/leaflet@1.8.0/dist/leaflet.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"/>
     <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="css/style.css">
 
@@ -31,7 +31,6 @@
     </header>
 
     <main>
-        <div id="game-text"></div>
         <div id="map"></div>
     </main>
 
