--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
         </div>
     </main>
 
-    <footer class="footer"></footer>
+    <footer class="about.footer"></footer>
 </div>
 
 </body>
